First production release for private purpose only

--- a/src/components/grid/gridContainerPassword/css/gridContainerPassword.scss
+++ b/src/components/grid/gridContainerPassword/css/gridContainerPassword.scss
@@ -3,6 +3,7 @@
   min-height: 100vh;
   max-height: 100vh;
   padding: 0 20px;
+  background-color: hsl(var(--card));
 
   &__navbar {
     min-width: 100%;
@@ -11,9 +12,12 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    position: relative;
+    z-index: 1000;
   }
 
   &__main {
+    width: fit-content;
     padding: 64px;
     display: flex;
     flex-direction: column;
@@ -22,8 +26,65 @@
 
     max-width: 650px;
     margin: 0 auto;
+    gap: 2rem;
+  }
+
+  &__main-success {
+    width: fit-content;
+    padding: 40px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
+    max-width: 650px;
+    margin: 0 auto;
+    margin-top: 64px;
     gap: 2rem;
+    position: relative;
+    z-index: 10;
+
+    &__header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1.25rem;
+
+      text-align: center;
+      text-wrap: balance;
+
+      h1 {
+        span {
+          svg {
+            font-size: 2rem;
+            vertical-align: middle;
+            padding-bottom: 4px;
+          }
+        }
+      }
+    }
+
+    // &::after {
+    //   content: "";
+    //   position: absolute;
+    //   border-radius: 25px;
+    //   inset: 0;
+    //   background-color: hsl(var(--success) / 0.3);
+    //   z-index: -1000;
+    // }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .grid-container-password {
+    &__main {
+      margin: 40px auto;
+      padding: 0;
+      align-items: flex-start;
+    }
+    &__main-success {
+      margin: 40px auto;
+      padding: 40px 20px;
+    }
   }
 }
