--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,9 @@
 /* --background: 20 14.3% 4.1%; dark */
 html body {
   --testMainBG: #f3f4f6;
-  --test: #71717a;
-  --test2: hsl(240 3.8% 46.1%);
+  --test: 0 0% 83%;
+  --test2: hsl(0, 0%, 74%);
+
   --testMainMutedLightMode: 222 56% 88%;
   /* == layout sizes == */
   /* --nav-height: 65px; */
@@ -23,6 +24,7 @@ html body {
   /* == colors == */
   --white: 0 0% 100%;
   --black: 240 10% 3.9%;
+  --success: 88 50% 53%;
 
   /* == Custom Theme == */
   /* --custom-1: hsl(221 39% 11%); */
@@ -51,7 +53,7 @@ html body {
   --destructive: 0 84.2% 60.2%;
   --destructive-foreground: 210 40% 98%;
   --border: 214.3 31.8% 91.4%;
-  --input: 214.3 31.8% 91.4%;
+  --input: 0 0% 83%;
   --ring: 221.2 83.2% 53.3%;
 }
 
