--- a/src/components/grid/gridContainerPassword/css/gridContainerPassword.css
+++ b/src/components/grid/gridContainerPassword/css/gridContainerPassword.css
@@ -3,6 +3,7 @@
   min-height: 100vh;
   max-height: 100vh;
   padding: 0 20px;
+  background-color: hsl(var(--card));
 }
 .grid-container-password__navbar {
   min-width: 100%;
@@ -11,8 +12,12 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  position: relative;
+  z-index: 1000;
 }
 .grid-container-password__main {
+  width: -moz-fit-content;
+  width: fit-content;
   padding: 64px;
   display: flex;
   flex-direction: column;
@@ -20,7 +25,45 @@
   justify-content: center;
   max-width: 650px;
   margin: 0 auto;
+  gap: 2rem;
+}
+.grid-container-password__main-success {
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 40px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  max-width: 650px;
+  margin: 0 auto;
+  margin-top: 64px;
   gap: 2rem;
+  position: relative;
+  z-index: 10;
+}
+.grid-container-password__main-success__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.25rem;
+  text-align: center;
+  text-wrap: balance;
+}
+.grid-container-password__main-success__header h1 span svg {
+  font-size: 2rem;
+  vertical-align: middle;
+  padding-bottom: 4px;
+}
+
+@media screen and (max-width: 768px) {
+  .grid-container-password__main {
+    margin: 40px auto;
+    padding: 0;
+    align-items: flex-start;
+  }
+  .grid-container-password__main-success {
+    margin: 40px auto;
+    padding: 40px 20px;
+  }
 }/*# sourceMappingURL=gridContainerPassword.css.map */
