--- a/src/LandingPages/forgotPassword/components/common/css/forgotPasswordCommonComponents.css
+++ b/src/LandingPages/forgotPassword/components/common/css/forgotPasswordCommonComponents.css
@@ -6,4 +6,13 @@
 .grid-container-password__main__header__description {
   margin-top: 1.25rem;
   max-width: 450px;
+}
+
+@media screen and (max-width: 768px) {
+  .grid-container-password__main__header__title {
+    text-align: center;
+  }
+  .grid-container-password__main__header__description {
+    text-align: center;
+  }
 }/*# sourceMappingURL=forgotPasswordCommonComponents.css.map */
