--- a/src/components/grid/gridContainerPassword/css/gridContainerPassword.css
+++ b/src/components/grid/gridContainerPassword/css/gridContainerPassword.css
@@ -57,10 +57,19 @@
 }
 
 @media screen and (max-width: 768px) {
+  .grid-container-password__navbar a img {
+    height: 40px !important;
+  }
   .grid-container-password__main {
     margin: 40px auto;
     padding: 0;
     align-items: flex-start;
+  }
+  .grid-container-password__main .custom-form {
+    max-width: 100%;
+  }
+  .grid-container-password__main .custom-form .form-content-wrapper {
+    min-width: 100%;
   }
   .grid-container-password__main-success {
     margin: 40px auto;
