--- a/src/LandingPages/forgotPassword/components/common/css/forgotPasswordCommonComponents.scss
+++ b/src/LandingPages/forgotPassword/components/common/css/forgotPasswordCommonComponents.scss
@@ -14,3 +14,17 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .grid-container-password__main {
+    &__header {
+      &__title {
+        text-align: center;
+      }
+
+      &__description {
+        text-align: center;
+      }
+    }
+  }
+}
