--- a/src/components/form/components/customInput/css/customInput.scss
+++ b/src/components/form/components/customInput/css/customInput.scss
@@ -1,5 +1,6 @@
 .custom-input {
-  font-size: 0.8125rem;
+  font-size: 1rem;
+  // font-size: 0.8125rem;
   line-height: 1.25rem;
   height: 45px;
 
@@ -16,7 +17,7 @@
   &:autofill {
     box-shadow: inset 0 0 0 100px hsl(var(--background));
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.8125rem;
+    font-size: 1rem;
     appearance: textfield;
   }
 
@@ -36,70 +37,3 @@
   gap: 0.4125rem;
   align-items: flex-start;
 }
-
-.form-card {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 1.2rem;
-
-  padding: 1.5rem;
-  border: 1px solid hsl(var(--border));
-  border-radius: var(--radius);
-  margin: 0 auto;
-  .form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    &__group {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-
-      label {
-        font-size: 1rem;
-        font-family: inherit;
-      }
-
-      input {
-        font-size: 0.875rem;
-        line-height: 1.25rem;
-
-        padding: 0.25rem 0.75rem;
-        font-family: inherit;
-        background-color: hsl(var(--background)) !important;
-        border: 1px solid hsl(var(--border));
-        outline: none;
-        border-radius: calc(var(--radius) - 2px);
-        color: inherit;
-        margin: 0;
-        height: 2.25rem; // 1rem === 16px, then 2.25 / 15 = 36px
-
-        &:autofill {
-          box-shadow: inset 0 0 0 100px hsl(var(--background));
-          font-family: Arial, Helvetica, sans-serif;
-          font-size: 0.875rem;
-          appearance: textfield;
-        }
-
-        &::placeholder {
-        }
-      }
-    }
-  }
-
-  .switchPageStatement {
-    font-size: 0.875rem;
-    text-align: center;
-  }
-
-  .link {
-    text-decoration: underline;
-  }
-}
-
-// input:-internal-autofill-selected {
-//   background-color: var(--background) !important;
-//   transition: background-color 5000s ease-in-out 0s;
-// }
