--- a/src/components/grid/gridContainerPassword/css/gridContainerPassword.scss
+++ b/src/components/grid/gridContainerPassword/css/gridContainerPassword.scss
@@ -77,10 +77,25 @@
 
 @media screen and (max-width: 768px) {
   .grid-container-password {
+    &__navbar {
+      a {
+        img {
+          height: 40px !important;
+        }
+      }
+    }
     &__main {
       margin: 40px auto;
       padding: 0;
       align-items: flex-start;
+
+      .custom-form {
+        max-width: 100%;
+
+        .form-content-wrapper {
+          min-width: 100%;
+        }
+      }
     }
     &__main-success {
       margin: 40px auto;
