--- a/src/LandingPages/loginOrSignup/css/loginOrSignup.css
+++ b/src/LandingPages/loginOrSignup/css/loginOrSignup.css
@@ -1,7 +1,6 @@
 .login-or-signup {
-  margin: 0 auto;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   position: relative;
   overflow: visible;
   width: 100%;
@@ -9,6 +8,23 @@
 }
 .login-or-signup .section {
   flex: 1 0 calc(50% - 4rem);
+}
+.login-or-signup .section .form-card {
+  width: 100%;
+  max-width: 440px;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+.login-or-signup .section .form-card .switchPageStatement {
+  font-size: 0.875rem;
+  text-align: center;
+}
+.login-or-signup .section .form-card .switchPageStatement a {
+  color: hsl(var(--primary));
+}
+.login-or-signup .section .form-card .link {
+  text-decoration: underline;
 }
 .login-or-signup .first-section {
   display: flex;
@@ -21,38 +37,42 @@
   max-width: 370px;
   text-align: center;
 }
-.login-or-signup .first-section::after {
-  content: "";
-  position: fixed;
-  inset: 0;
-  background-color: hsl(var(--secondary));
-  z-index: -1;
-  right: 50%;
-  top: 0;
-  left: -1000000px;
-  bottom: 0;
+.login-or-signup .signup-animation {
+  margin-bottom: 100px;
 }
 .login-or-signup .second-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  position: relative;
 }
 .login-or-signup .second-section .form-card {
   border-color: hsl(var(--border));
   border-color: transparent;
   margin: 0 !important;
 }
+.login-or-signup .second-section::after {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background-color: hsl(var(--card));
+  z-index: -1;
+  left: 50%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
 .login-or-signup .signup-success-on-login .form-card {
   border-color: transparent;
-}
-.login-or-signup .forms-section .form-card {
-  max-width: 450px;
 }
 
 @media screen and (max-width: 1080px) {
   .login-or-signup {
     gap: 0;
+  }
+  .login-or-signup .section .form-card {
+    max-width: 350px;
   }
   .login-or-signup .first-section {
     align-items: center;
@@ -66,15 +86,21 @@
     align-items: center;
     flex: 1 0 60%;
   }
+  .login-or-signup .second-section::after {
+    display: none;
+  }
 }
 @media screen and (max-width: 768px) {
   .login-or-signup {
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     gap: 3rem;
+    background-color: hsl(var(--card));
   }
   .login-or-signup .section {
     width: 100%;
+    border: none;
   }
   .login-or-signup .first-section {
     align-items: center;
@@ -88,8 +114,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border: none;
   }
   .login-or-signup .second-section .form-card {
     border-color: hsl(var(--border));
+  }
+  .login-or-signup .second-section::after {
+    display: none;
   }
 }/*# sourceMappingURL=loginOrSignup.css.map */
