--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,7 @@ html body {
   --destructive-foreground: 210 40% 98%;
   --border: 214.3 31.8% 91.4%;
   --input: 0 0% 83%;
+  --input-hover: 0 0% 40%;
   --ring: 221.2 83.2% 53.3%;
 }
 
@@ -80,6 +81,8 @@ html body {
     --destructive-foreground: 210 40% 98%;
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
+    --input-hover: 217 34% 32%;
+
     --ring: 224.3 76.3% 48%;
   }
 }
@@ -95,12 +98,13 @@ body {
   min-width: 100vw;
   max-width: 100vw;
 
+  min-height: 100dvh;
+  max-height: 100dvh;
+  overflow-y: scroll;
+
   overflow-x: hidden;
   color: hsl(var(--foreground));
   background: hsl(var(--background));
-}
-
-body {
 }
 
 #login-signup-button .isLoading .loader {
