--- a/src/components/form/components/customInput/css/customInput.css
+++ b/src/components/form/components/customInput/css/customInput.css
@@ -10,24 +10,36 @@
   border-radius: calc(var(--radius) - 2px);
   color: inherit;
   margin: 0;
+  transition: border-color 0.15s ease-in-out;
 }
 .custom-input:-webkit-autofill {
-  box-shadow: inset 0 0 0 100px hsl(var(--background));
+  box-shadow: inset 0 0 0 100px hsl(var(--card));
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
   -webkit-appearance: textfield;
           appearance: textfield;
 }
 .custom-input:autofill {
-  box-shadow: inset 0 0 0 100px hsl(var(--background));
+  box-shadow: inset 0 0 0 100px hsl(var(--card));
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
   -webkit-appearance: textfield;
      -moz-appearance: textfield;
           appearance: textfield;
 }
-.custom-input:hover {
-  border-color: hsl(var(--input)/1.5);
+.custom-input::-moz-placeholder {
+  color: hsl(var(--foreground)/0.5);
+}
+.custom-input::placeholder {
+  color: hsl(var(--foreground)/0.5);
+}
+.custom-input:hover, .custom-input:focus, .custom-input:active {
+  border-color: hsl(var(--input-hover));
+}
+@media screen and (prefers-color-scheme: dark) {
+  .custom-input:hover, .custom-input:focus, .custom-input:active {
+    border-color: hsl(var(--input-hover));
+  }
 }
 
 .custom-input-label {
