--- a/src/components/form/components/customInput/css/customInput.scss
+++ b/src/components/form/components/customInput/css/customInput.scss
@@ -14,15 +14,27 @@
   color: inherit;
   margin: 0;
 
+  transition: border-color 0.15s ease-in-out;
+
   &:autofill {
-    box-shadow: inset 0 0 0 100px hsl(var(--background));
+    box-shadow: inset 0 0 0 100px hsl(var(--card));
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
     appearance: textfield;
   }
 
-  &:hover {
-    border-color: hsl(var(--input) / 1.5);
+  &::placeholder {
+    color: hsl(var(--foreground) / 0.5);
+  }
+
+  &:hover,
+  &:focus,
+  &:active {
+    border-color: hsl(var(--input-hover));
+
+    @media screen and (prefers-color-scheme: dark) {
+      border-color: hsl(var(--input-hover));
+    }
   }
 }
 
