--- a/src/components/grid/gridContainerLogin/GridContainerLoginOrSignupNavbar/css/login-or-signup-navbar.css
+++ b/src/components/grid/gridContainerLogin/GridContainerLoginOrSignupNavbar/css/login-or-signup-navbar.css
@@ -1,22 +1,32 @@
 .login-or-signup-navbar {
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 60px;
-  left: 0;
+  height: var(--nav-height);
   z-index: 100000;
-  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0 40px;
 }
-.login-or-signup-navbar img {
-  height: 55px;
+.login-or-signup-navbar__link {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  font-size: 1.2rem;
+  color: hsl(var(--foreground));
+  text-decoration: none;
+}
+.login-or-signup-navbar__link svg {
+  height: 45px;
   width: auto;
 }
 
 @media screen and (max-width: 768px) {
   .login-or-signup-navbar {
-    padding: 20px;
+    padding: 0 1rem;
   }
-  .login-or-signup-navbar img {
-    height: 40px !important;
+  .login-or-signup-navbar__link {
+    font-size: 0.875rem;
+  }
+  .login-or-signup-navbar__link svg {
+    height: 35px !important;
   }
 }/*# sourceMappingURL=login-or-signup-navbar.css.map */
