--- a/src/components/grid/gridContainerLogin/GridContainerLoginOrSignupNavbar/css/login-or-signup-navbar.scss
+++ b/src/components/grid/gridContainerLogin/GridContainerLoginOrSignupNavbar/css/login-or-signup-navbar.scss
@@ -1,23 +1,34 @@
 .login-or-signup-navbar {
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 60px;
-  left: 0;
+  height: var(--nav-height);
   z-index: 100000;
-  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0 40px;
 
-  img {
-    height: 55px;
-    width: auto;
+  &__link {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+    font-size: 1.2rem;
+    color: hsl(var(--foreground));
+    text-decoration: none;
+    svg {
+      height: 45px;
+      width: auto;
+    }
   }
 }
 
 @media screen and (max-width: 768px) {
   .login-or-signup-navbar {
-    img {
-      height: 40px !important;
+    padding: 0 1rem;
+    &__link {
+      font-size: 0.875rem;
+
+      svg {
+        height: 35px !important;
+      }
     }
-    padding: 20px;
   }
 }
