--- a/src/components/grid/gridContainerLogin/css/gridContainerLogin.css
+++ b/src/components/grid/gridContainerLogin/css/gridContainerLogin.css
@@ -1,19 +1,29 @@
 .grid-container-login {
   max-width: var(--max-width);
-  min-height: 100vh;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 100vw;
-  grid-template-rows: 100dvh;
+  grid-template-rows: var(--nav-height) calc(100dvh - var(--nav-height));
   z-index: 1;
-  overflow: visible;
+  overflow: auto;
+  overflow-y: scroll;
 }
 .grid-container-login__main {
+  padding: 6rem 20px;
   flex: 1;
   max-width: var(--main--content-max-width);
   z-index: 1;
   overflow-x: hidden;
-  height: -moz-fit-content;
-  height: fit-content;
-  align-self: center;
+  align-self: flex-start;
+}
+
+@media screen and (max-width: 1080px) {
+  .grid-container-login {
+    background-color: hsl(var(--card));
+  }
+}
+@media screen and (max-width: 768px) {
+  .grid-container-login {
+    background-color: hsl(var(--card));
+  }
 }/*# sourceMappingURL=gridContainerLogin.css.map */
