--- a/src/components/grid/gridContainerPassword/css/gridContainerPassword.css
+++ b/src/components/grid/gridContainerPassword/css/gridContainerPassword.css
@@ -2,23 +2,12 @@
   min-width: 100vw;
   min-height: 100vh;
   max-height: 100vh;
-  padding: 0 20px;
   background-color: hsl(var(--card));
-}
-.grid-container-password__navbar {
-  min-width: 100%;
-  height: auto;
-  padding: 20px 0;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  position: relative;
-  z-index: 1000;
 }
 .grid-container-password__main {
   width: -moz-fit-content;
   width: fit-content;
-  padding: 64px;
+  padding: 6rem 20px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -30,7 +19,7 @@
 .grid-container-password__main-success {
   width: -moz-fit-content;
   width: fit-content;
-  padding: 40px;
+  padding: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,8 +50,6 @@
     height: 40px !important;
   }
   .grid-container-password__main {
-    margin: 40px auto;
-    padding: 0;
     align-items: flex-start;
   }
   .grid-container-password__main .custom-form {
@@ -72,7 +59,7 @@
     min-width: 100%;
   }
   .grid-container-password__main-success {
-    margin: 40px auto;
+    margin: 20px auto;
     padding: 40px 20px;
   }
 }/*# sourceMappingURL=gridContainerPassword.css.map */
