--- a/src/components/grid/gridContainerPassword/css/gridContainerPassword.scss
+++ b/src/components/grid/gridContainerPassword/css/gridContainerPassword.scss
@@ -2,23 +2,11 @@
   min-width: 100vw;
   min-height: 100vh;
   max-height: 100vh;
-  padding: 0 20px;
   background-color: hsl(var(--card));
-
-  &__navbar {
-    min-width: 100%;
-    height: auto;
-    padding: 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    position: relative;
-    z-index: 1000;
-  }
 
   &__main {
     width: fit-content;
-    padding: 64px;
+    padding: 6rem 20px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -31,7 +19,7 @@
 
   &__main-success {
     width: fit-content;
-    padding: 40px;
+    padding: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,8 +73,6 @@
       }
     }
     &__main {
-      margin: 40px auto;
-      padding: 0;
       align-items: flex-start;
 
       .custom-form {
@@ -98,7 +84,7 @@
       }
     }
     &__main-success {
-      margin: 40px auto;
+      margin: 20px auto;
       padding: 40px 20px;
     }
   }
