--- a/src/components/ui/forms/css/form.css
+++ b/src/components/ui/forms/css/form.css
@@ -1,60 +1,1 @@
-.form-card {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 1.2rem;
-  padding: 1.5rem;
-  border: 1px solid hsl(var(--border));
-  border-radius: var(--radius);
-  margin: 0 auto;
-}
-.form-card .form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-}
-.form-card .form__group {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-.form-card .form__group label {
-  font-size: 1rem;
-  font-family: inherit;
-}
-.form-card .form__group input {
-  font-size: 1rem;
-  line-height: 1.25rem;
-  padding: 0.25rem 0.75rem;
-  font-family: inherit;
-  background-color: hsl(var(--background)) !important;
-  border: 1px solid hsl(var(--border));
-  outline: none;
-  border-radius: calc(var(--radius) - 2px);
-  height: 2.25rem;
-  color: inherit;
-  margin: 0;
-}
-.form-card .form__group input:-webkit-autofill {
-  box-shadow: inset 0 0 0 100px hsl(var(--background));
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1rem;
-  -webkit-appearance: textfield;
-          appearance: textfield;
-}
-.form-card .form__group input:autofill {
-  box-shadow: inset 0 0 0 100px hsl(var(--background));
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1rem;
-  -webkit-appearance: textfield;
-     -moz-appearance: textfield;
-          appearance: textfield;
-}
-.form-card .switchPageStatement {
-  font-size: 0.875rem;
-  text-align: center;
-}
-.form-card .link {
-  text-decoration: underline;
-}/*# sourceMappingURL=form.css.map */
+/*# sourceMappingURL=form.css.map */
