--- a/src/components/ui/forms/css/form.scss
+++ b/src/components/ui/forms/css/form.scss
@@ -1,64 +1,19 @@
-.form-card {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 1.2rem;
+// .form-card {
+//   width: 100%;
+//   max-width: 440px;
+//   display: flex;
+//   flex-direction: column;
+//   gap: 1.2rem;
 
-  padding: 1.5rem;
-  border: 1px solid hsl(var(--border));
-  border-radius: var(--radius);
-  margin: 0 auto;
-  .form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    &__group {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
+//   .switchPageStatement {
+//     font-size: 0.875rem;
+//     text-align: center;
+//   }
 
-      label {
-        font-size: 1rem;
-        font-family: inherit;
-      }
-
-      input {
-        font-size: 1rem;
-        line-height: 1.25rem;
-
-        padding: 0.25rem 0.75rem;
-        font-family: inherit;
-        background-color: hsl(var(--background)) !important;
-        border: 1px solid hsl(var(--border));
-        outline: none;
-        border-radius: calc(var(--radius) - 2px);
-        height: 2.25rem;
-        color: inherit;
-        margin: 0;
-
-        &:autofill {
-          box-shadow: inset 0 0 0 100px hsl(var(--background));
-          font-family: Arial, Helvetica, sans-serif;
-          font-size: 1rem;
-          appearance: textfield;
-        }
-
-        &::placeholder {
-        }
-      }
-    }
-  }
-
-  .switchPageStatement {
-    font-size: 0.875rem;
-    text-align: center;
-  }
-
-  .link {
-    text-decoration: underline;
-  }
-}
+//   .link {
+//     text-decoration: underline;
+//   }
+// }
 
 // input:-internal-autofill-selected {
 //   background-color: var(--background) !important;
