Saving working WIP. this save is the last backup before new features added and can be used to revert back to

--- a/src/LandingPages/dashboardPage/components/dashboardTodos/components/statusColumn/css/statusColumn.css
+++ b/src/LandingPages/dashboardPage/components/dashboardTodos/components/statusColumn/css/statusColumn.css
@@ -16,4 +16,8 @@
   gap: 0.5rem;
   overflow: hidden;
   height: 100%;
+  border: 1px solid transparent;
+}
+.status-column-container__ul-active {
+  border-color: red;
 }/*# sourceMappingURL=statusColumn.css.map */
