--- a/src/LandingPages/dashboardPage/components/dashboardTodos/components/statusColumn/css/statusColumn.scss
+++ b/src/LandingPages/dashboardPage/components/dashboardTodos/components/statusColumn/css/statusColumn.scss
@@ -15,9 +15,14 @@
     gap: 0.5rem;
     overflow: hidden;
     height: 100%;
+    border: 1px solid transparent;
 
     &__reveal-card {
     }
+  }
+
+  &__ul-active {
+    border-color: red;
   }
 
   &__ul-active {
