--- a/src/components/grid/gridContainer/gridComponents/gridSidebar/components/sidebarContentList/css/sidebarContentList.css
+++ b/src/components/grid/gridContainer/gridComponents/gridSidebar/components/sidebarContentList/css/sidebarContentList.css
@@ -24,7 +24,7 @@
   position: relative;
 }
 .sidebar__content__item__link svg {
-  flex: 0 0 auto;
+  flex: 0 0 24px;
   background-color: hsl(var(--background));
 }
 .sidebar__content__item__link:hover {
@@ -57,6 +57,12 @@
 }
 .sidebar__content__item__link-active:hover svg {
   background-color: hsl(var(--muted)) !important;
+}
+.sidebar__content__item-mobile-only {
+  display: none;
+  border: none;
+  outline: none;
+  font-family: inherit;
 }
 
 @media screen and (min-width: 769px) {
@@ -104,4 +110,15 @@
   width: min-content;
   overflow: hidden;
   transition: width 0.15s ease-in-out;
+}
+
+@media screen and (max-width: 768px) {
+  [data-nav-open=true] .sidebar__content__item-mobile-only {
+    display: initial;
+    cursor: pointer;
+  }
+  [data-nav-open=true] .sidebar__content__item-mobile-only button {
+    border: none;
+    font-family: inherit;
+  }
 }/*# sourceMappingURL=sidebarContentList.css.map */
