--- a/src/LandingPages/dashboardPage/components/taskboard/css/draggableColumn.module.css
+++ b/src/LandingPages/dashboardPage/components/taskboard/css/draggableColumn.module.css
@@ -1,9 +1,10 @@
 .column {
   flex: 1;
-  min-width: fit-content;
+  min-width: 100%;
   padding: 1.2rem 1.2rem 2rem;
   list-style-type: none;
   background-color: hsl(var(--card));
+  height: fit-content;
 
   border: 1px solid hsl(var(--border));
   border-radius: calc(var(--radius) + 2px * 2);
@@ -11,6 +12,7 @@
 
 .header {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
   padding-bottom: 1rem;
 
@@ -43,13 +45,13 @@
   fill: none;
   cursor: grab;
 
-  width: 1rem;
-  height: 1rem;
+  width: 1.2rem;
+  height: 1.2rem;
 }
 
 .header .headerButtons .editColumn {
-  width: calc(1rem + 4px);
-  height: calc(1rem + 4px);
+  width: calc(1.2rem + 4px);
+  height: calc(1.2rem + 4px);
   background-color: transparent;
   padding: 2px;
   pointer-events: all;
@@ -63,6 +65,10 @@
 }
 
 .header .headerButtons .editColumnActive {
+  background-color: hsl(var(--accent));
+  color: hsl(var(--white));
+}
+.header .headerButtons .editColumnActive:hover {
   background-color: hsl(var(--accent));
   color: hsl(var(--white));
 }
