--- a/src/components/ui/cards/revealCard/css/revealCard.scss
+++ b/src/components/ui/cards/revealCard/css/revealCard.scss
@@ -15,10 +15,14 @@
     position: relative;
     padding: 1.5rem;
     &__header {
+      overflow: hidden;
       h3 {
         font-weight: 500;
         font-size: 1rem;
         line-height: 1.5rem;
+        hyphens: auto;
+        text-wrap: balance;
+        min-width: 0;
       }
       p {
         font-size: 0.875rem;
