--- a/src/LandingPages/dashboardPage/components/dashboardHeader/css/dashboardHeader.scss
+++ b/src/LandingPages/dashboardPage/components/dashboardHeader/css/dashboardHeader.scss
@@ -1,10 +1,39 @@
 .dashboard-header {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+  margin-bottom: 2rem;
+
+  > * {
+    transition: all 0.3s ease;
+  }
   &__title {
-    &__hello {
-      font-size: 1.5rem;
+    padding: 0;
+    line-height: 1;
+    color: hsl(var(--muted-foreground));
+    font-size: 1rem;
+
+    &:hover {
+      cursor: pointer;
+      text-decoration: underline;
     }
-    &__name {
-      font-size: 1.5rem;
+  }
+
+  &__slash {
+    font-size: 2rem;
+  }
+
+  &__activeTab {
+    font-size: 1.5rem;
+    color: hsl(var(--foreground));
+    &:hover {
+      cursor: default !important;
+      text-decoration: none !important;
+    }
+
+    span {
+      font-size: 2rem !important;
+      color: hsl(var(--foreground));
     }
   }
 }
