--- a/src/components/createTodo/css/createTask.css
+++ b/src/components/createTodo/css/createTask.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  background-color: hsl(var(--card));
 }
 .create-task__header {
   display: flex;
@@ -19,6 +20,17 @@
 }
 .create-task__header p {
   font-size: 0.875rem;
+}
+.create-task .custom-input {
+  width: 100%;
+  max-width: 450px !important;
+}
+.create-task select {
+  padding: 0.5rem;
+}
+.create-task .selects {
+  display: flex;
+  gap: 1rem;
 }
 .create-task__content {
   display: flex;
@@ -35,4 +47,10 @@
 }
 .create-task__footer {
   display: flex;
+}
+
+@media screen and (max-width: 768px) {
+  .create-task .selects {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=createTask.css.map */
