--- a/src/components/createTodo/css/createTask.scss
+++ b/src/components/createTodo/css/createTask.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  background-color: hsl(var(--card));
 
   &__header {
     display: flex;
@@ -23,6 +24,20 @@
     p {
       font-size: 0.875rem;
     }
+  }
+
+  .custom-input {
+    width: 100%;
+    max-width: 450px !important;
+  }
+
+  select {
+    padding: 0.5rem;
+  }
+
+  .selects {
+    display: flex;
+    gap: 1rem;
   }
 
   &__content {
@@ -43,5 +58,13 @@
 
   &__footer {
     display: flex;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .create-task {
+    .selects {
+      flex-direction: column;
+    }
   }
 }
