--- a/src/components/modal/css/modal.scss
+++ b/src/components/modal/css/modal.scss
@@ -17,6 +17,7 @@
   transition-duration: 350ms;
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.15, 1, 0.3, 1);
+  background-color: hsl(var(--background));
 
   &__backdrop-clickable {
     position: fixed;
