--- a/src/components/createTodo/css/createTask.scss
+++ b/src/components/createTodo/css/createTask.scss
@@ -63,6 +63,8 @@
 
 @media screen and (max-width: 768px) {
   .create-task {
+    width: 100%;
+    min-width: 100vh;
     .selects {
       flex-direction: column;
     }
