--- a/src/components/modal/css/modal.scss
+++ b/src/components/modal/css/modal.scss
@@ -5,6 +5,7 @@
 
   inset-inline: 0px;
   margin-inline: auto;
+  inset-block-start: 60px;
 
   border-radius: 0.5rem;
   box-shadow: hsl(0 0% 0% / 10%) 0 0 0.5rem 0.25rem;
@@ -12,12 +13,16 @@
 
   overflow-y: scroll;
 
-  inset-block-start: 60px;
-
   transition-duration: 350ms;
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.15, 1, 0.3, 1);
   background-color: hsl(var(--background));
+
+  &__closeButton {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+  }
 
   &__backdrop-clickable {
     position: fixed;
@@ -38,5 +43,20 @@
 @media screen and (max-width: 768px) {
   .modal {
     max-width: 100%;
+    max-height: 100%;
+    min-height: 100%;
+    min-width: 100%;
+    position: absolute;
+    border: none;
+    border-radius: 0;
+
+    inset-inline: 0px;
+    margin-inline: 0;
+    inset-block-start: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
 }
