--- a/src/components/ui/cards/draggableCard/css/revealCard.scss
+++ b/src/components/ui/cards/draggableCard/css/revealCard.scss
@@ -40,6 +40,7 @@
         hyphens: auto;
         text-wrap: balance;
         min-width: 0;
+        user-select: text;
       }
       p {
         font-size: 0.875rem;
