--- a/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.scss
+++ b/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.scss
@@ -1,5 +1,4 @@
 .taskViewer {
-  flex: 1 0 45%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -13,7 +12,8 @@
   padding-top: calc(2rem + 4px);
   right: 0;
   bottom: 0;
-  width: calc(45% - 64px);
+  left: 0;
+  padding-left: 2rem;
   overflow: auto;
   transition: transform 0.3s ease-in-out;
   transform: translateX(120%);
@@ -47,6 +47,11 @@
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
+
+    .delete {
+      background-color: hsl(var(--destructive));
+      text: hsl(var(--destructive-foreground));
+    }
   }
 
   .titleInput {
@@ -146,35 +151,14 @@
 
 @media screen and (max-width: 1200px) {
   .taskViewer {
-    flex: 1 0 55%;
-    width: calc(55% - 64px);
   }
 }
 @media screen and (max-width: 1000px) {
   .taskViewer {
-    right: 0;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: calc(100% - 64px);
-    position: absolute;
-
-    z-index: 1000;
-    left: 64px;
   }
 }
 @media screen and (max-width: 768px) {
   .taskViewer {
-    right: 0;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    position: absolute;
-    z-index: 1000;
-    transform: translateX(0%) translateY(120%);
-    padding: 40px 2rem 64px;
-
     &::after {
       content: "";
       display: none;
